err/hangul.translit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hangul'...
Compiling './lib/python3.5/site-packages/hangul/translit.py'...
***   File "./lib/python3.5/site-packages/hangul/translit.py", line 33
    ur"""
Date: 2010-9-16

Transliterate Hangul(Korean) to alphabet according to Revised Romanization of Korean(2000)

Usage:
    >>> from hangul import translit
    >>> translit.test()
    한국                    --> han-guk
    한국어                  --> han-gugeo
    저작권                  --> cheojakkweon
    저작                   --> cheojak
    작심삼일                 --> chaksimsamil
    밧줄                   --> patchul
    
    >>> s = translit.romanize('한국어')
    >>> print s
    han-gugeo
    >>>
    >>> s = translit.romanize('안녕하세요!')
    >>> print s
    annyeonghaseyo!

Reference Sites:
    http://en.wikipedia.org/wiki/Revised_Romanization_of_Korean
    http://ko.wikipedia.org/wiki/국어의_로마자_표기법
    http://www.kfunigraz.ac.at/~katzer/korean_hangul_unicode.html
    http://code.google.com/p/krtpy/
    http://unicode.org/reports/tr15/#Hangul
    http://jrgraphix.net/research/unicode_blocks.php?block=90
"""
         
               

                                                                                          

      
                                   
                       
                                     
                                      
                                         
                                    
                                         
                                    
    
                                    
               
             
       
                                       
               
                   

                
                                                               
                                            
                                                                 
                                   
                                           
                                                             
  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hangul.translit-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
